<resources>
    <string name="app_name">Application</string>
    <string name="login_label"><b>Login</b></string>
    <string name="hint_email">Please Enter Email Address</string>
    <string name="hint_password">Please Enter Your Password</string>
    <string name="hint_ConfirmPassword">Please Confirm Your Password</string>
    <string name="hint_FullName">Enter your Full Name</string>
    <string name="hint_Location">Location</string>
    <string name="date_of_birth">Date of Birth</string>

    <string name="register_label">Register</string>
    <string name="text_forgetPassword"><i><u>Forget Password?</u></i></string>





</resources>