<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txt_register_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:text="@string/register_label"
                android:textColor="@color/purple_700"
                android:textSize="41sp" />

            <EditText
                android:id="@+id/edt_register_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_register_label"
                android:inputType="textEmailAddress"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:hint="@string/hint_email"
                android:textAlignment="center"
                android:textSize="25sp"/>

            <EditText
                android:id="@+id/edt_register_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edt_register_email"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:textAlignment="center"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/edt_register_Cpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edt_register_password"
                android:inputType="textPassword"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:hint="@string/hint_ConfirmPassword"
                android:textAlignment="center"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/edt_register_FullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edt_register_Cpassword"
                android:inputType="textPersonName"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:hint="@string/hint_FullName"
                android:textAlignment="center"
                android:textSize="25sp" />



            <EditText
                android:id="@+id/edt_register_Location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edt_register_FullName"
                android:inputType="text"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:hint="@string/hint_Location"
                android:textAlignment="center"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/txt_date_of_birthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edt_register_Location"
                android:inputType="text"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:text="@string/date_of_birth"
                android:textAlignment="center"
                android:textSize="25sp" />

            <RadioGroup
                android:id="@+id/radio_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_date_of_birthday"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:gravity="center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/edt_register_Location"
                    android:inputType="text"
                    android:text="Gender:"
                    android:textSize="25sp"
                    android:layout_marginRight="10dp"/>

                <RadioButton
                    android:id="@+id/radio_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Male"
                    android:textAlignment="center"
                    android:textSize="25sp"
                    android:layout_marginRight="10dp"
                    android:checked="true"/>

                <RadioButton
                    android:id="@+id/radio_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Female"
                    android:textAlignment="center"
                    android:textSize="25sp" />

            </RadioGroup>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_Register"
                android:textSize="20sp"
                android:text="@string/register_label"
                android:layout_below="@+id/radio_gender"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:layout_centerHorizontal="true"/>

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>